Do not ask for confirmation of closing when logging out.

This effectively reverts the change which was made to ask for
confirmation when powering off. That issue needs to be reworked in
next feature release, but for now just revert it since the current
implementation should cause more annoyance than benefit.

BUG: 301458
FIXED-IN: 4.9.0
CCBUG: 127194